# algorithms

./: CMakeLists.txt  LICENSE
stack/: stack.cpp  stack.h
test/: CMakeLists.txt  stack_test.cpp
